[gd_scene load_steps=5 format=2]

[ext_resource path="res://icons/add_white_48dp.svg" type="Texture" id=1]
[ext_resource path="res://icons/delete_white_48dp.svg" type="Texture" id=2]
[ext_resource path="res://scripts/widgets/BudgetWidget/CategoryRow.gd" type="Script" id=3]
[ext_resource path="res://scripts/widgets/BudgetWidget/TransactionRow.tscn" type="PackedScene" id=4]

[node name="VBoxContainer" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
script = ExtResource( 3 )
transaction_row = ExtResource( 4 )

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
margin_right = 720.0
margin_bottom = 156.0

[node name="HSeparator" type="HSeparator" parent="HBoxContainer2"]
margin_right = 65.0
margin_bottom = 4.0
size_flags_horizontal = 3
size_flags_vertical = 0
size_flags_stretch_ratio = 0.1

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer2"]
margin_left = 69.0
margin_right = 720.0
margin_bottom = 156.0
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer2/VBoxContainer"]
margin_right = 651.0
margin_bottom = 54.0

[node name="AddButton" type="Button" parent="HBoxContainer2/VBoxContainer/HBoxContainer"]
margin_right = 60.0
margin_bottom = 54.0
icon = ExtResource( 1 )

[node name="LineEdit" type="LineEdit" parent="HBoxContainer2/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 64.0
margin_right = 587.0
margin_bottom = 54.0
size_flags_horizontal = 3

[node name="DeleteButton" type="Button" parent="HBoxContainer2/VBoxContainer/HBoxContainer"]
margin_left = 591.0
margin_right = 651.0
margin_bottom = 54.0
icon = ExtResource( 2 )

[node name="HBoxContainer3" type="HBoxContainer" parent="HBoxContainer2/VBoxContainer"]
margin_top = 58.0
margin_right = 651.0
margin_bottom = 89.0

[node name="Label" type="Label" parent="HBoxContainer2/VBoxContainer/HBoxContainer3"]
margin_top = 4.0
margin_right = 110.0
margin_bottom = 27.0
text = "Is Income?"

[node name="IsIncomeCheckBox" type="CheckBox" parent="HBoxContainer2/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
margin_left = 114.0
margin_right = 138.0
margin_bottom = 31.0

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer2/VBoxContainer"]
margin_top = 93.0
margin_right = 651.0
margin_bottom = 116.0

[node name="Label" type="Label" parent="HBoxContainer2/VBoxContainer/HBoxContainer2"]
margin_right = 132.0
margin_bottom = 23.0
text = "Allocation: "

[node name="AllocationInput" type="HSlider" parent="HBoxContainer2/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
margin_left = 136.0
margin_right = 651.0
margin_bottom = 16.0
size_flags_horizontal = 3
max_value = 1.0
step = 0.01

[node name="ColorPickerButton" type="ColorPickerButton" parent="HBoxContainer2/VBoxContainer"]
unique_name_in_owner = true
margin_top = 120.0
margin_right = 651.0
margin_bottom = 149.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
edit_alpha = false

[node name="HBoxContainer4" type="HBoxContainer" parent="HBoxContainer2/VBoxContainer"]
margin_top = 153.0
margin_right = 651.0
margin_bottom = 156.0

[node name="VSeparator" type="VSeparator" parent="HBoxContainer2/VBoxContainer/HBoxContainer4"]
margin_right = 4.0
margin_bottom = 3.0

[node name="ChildBox" type="VBoxContainer" parent="HBoxContainer2/VBoxContainer/HBoxContainer4"]
unique_name_in_owner = true
margin_left = 8.0
margin_right = 651.0
margin_bottom = 3.0
size_flags_horizontal = 3

[connection signal="pressed" from="HBoxContainer2/VBoxContainer/HBoxContainer/AddButton" to="." method="_on_AddButton_pressed"]
[connection signal="text_entered" from="HBoxContainer2/VBoxContainer/HBoxContainer/LineEdit" to="." method="_on_LineEdit_text_entered"]
[connection signal="pressed" from="HBoxContainer2/VBoxContainer/HBoxContainer/DeleteButton" to="." method="_on_DeleteButton_pressed"]
[connection signal="toggled" from="HBoxContainer2/VBoxContainer/HBoxContainer3/IsIncomeCheckBox" to="." method="_on_IsIncomeCheckBox_toggled"]
[connection signal="drag_ended" from="HBoxContainer2/VBoxContainer/HBoxContainer2/AllocationInput" to="." method="_on_AllocationInput_drag_ended"]
[connection signal="popup_closed" from="HBoxContainer2/VBoxContainer/ColorPickerButton" to="." method="_on_ColorPickerButton_popup_closed"]
